--- a/c30211p014/Final/Interpolation.Rmd
+++ b/c30211p014/Final/Interpolation.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 Setting up the date to analyze:
 
 ```{r date_setup}
-source('WeatherTest.R')
+source('WeatherMain.R')
 # Global var for table display:
 headSize<-10
   
