split not working

--- a/EMBD.X412.4/lab3/Lab3.ipynb
+++ b/EMBD.X412.4/lab3/Lab3.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -20,8 +20,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "..........................+++\n",
-      "..............+++\n",
+      ".............+++\n",
+      ".....................................................+++\n",
       "writing RSA key\n"
      ]
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,13 +49,13 @@
      "output_type": "stream",
      "text": [
       "-----BEGIN PUBLIC KEY-----\r\n",
-      "MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuBJ31M58PVnS3u0b1doZ\r\n",
-      "0tglgFiGKpd8efRIVmGD1irdHHuutEOQASU+lK+5M2BZoI8/qNinsa4KNlzRUaJt\r\n",
-      "Q54UbY31auA41I0W/aYZJtIXHPxZ5V4dbk5Ern51zL8WwKtHabveGDydryA0dQi0\r\n",
-      "IBULHxycGE2cGiIGPUhsZ8GNbcuXfGCXqtsUbT3qKgRmFwwImvcb0VjXXex7tc04\r\n",
-      "JJ550WO9As0xmR/VGZFqjfyYG+ZCJi8Ul+sldYgjKTBrikCZqtHuRdMsqHO6JThJ\r\n",
-      "+RX3pRNedQy6Omo20XfooJX1koTxwverpzs4GcGDj9dVg+uDDn2TpgzZfCcw6xxa\r\n",
-      "PQIDAQAB\r\n",
+      "MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAsN8XzG7VP98ZCdOPiVOW\r\n",
+      "sSSrYSEQzjCeyBjrkwFYteywEJqGbexODeJecuQDo4gec/Yc7tutREMunig4Vgj4\r\n",
+      "mk+XkbfEKpFdxNECJ9Dh3xpVd6Yl7AuxfxwEl8kPenY02vbegauQTIGcj/Fwo3N9\r\n",
+      "eoJYhJ6tNyiJSHq5nd6PlcQ6R1mxkwV3m4/U9oCG8COxWpyF2qjI6aMirt+LrIBS\r\n",
+      "kMRGtwQZxOM0ZbfdywFPag4fEl50kLQWZgajH0L70BQvmrtJDu1yp89cMl8OTdBJ\r\n",
+      "XxK8fpcLDxWJnrjZqHfL1kZhBNV4SqC/o0oK9Ev5tetbUxDa/6aUIkjAzGk55U2/\r\n",
+      "YQIDAQAB\r\n",
       "-----END PUBLIC KEY-----\r\n"
      ]
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "U2FsdGVkX1/3rbL3LKICmHjilRBOkaufIz4eEa/2l/4=\r\n"
+      "U2FsdGVkX181ujwp1fCUCQ2QeonFIEHnlfCQpoWrS6M=\r\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,37 +155,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iot-data.txt\t  iot-data.txt.enc.golden  passwdfile\t    public_key.pem\r\n",
-      "iot-data.txt.enc  Lab3.ipynb\t\t   private_key.pem\r\n"
-     ]
-    }
-   ],
    "source": [
-    "4. Download generated IoT simulated data \"lab3-iot-gendata.txt.enc\" and decrypt it:\n",
-    "    \n",
-    "    $ wget https://raw.githubusercontent.com/hinkmond/iot-big-data-processing-and-analytics/master/lab3-iot-gendata.txt.enc\n",
-    "$ echo \"abc123\" > passwdfile\n",
-    "$ openssl aes-256-cbc -d -a -salt -in lab3-iot-gendata.txt.enc -pass file:./passwdfile > lab3-iot-gendata.txt"
+    "4. Download generated IoT simulated data \"lab3-iot-gendata.txt.enc\" and decrypt it:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "--2019-04-20 05:57:01--  https://raw.githubusercontent.com/hinkmond/iot-big-data-processing-and-analytics/master/lab3-iot-gendata.txt.enc\n",
+      "--2019-04-20 07:09:56--  https://raw.githubusercontent.com/hinkmond/iot-big-data-processing-and-analytics/master/lab3-iot-gendata.txt.enc\n",
       "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.52.133\n",
       "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.52.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
@@ -194,7 +179,7 @@
       "\n",
       "     0K                                                       100%  105M=0s\n",
       "\n",
-      "2019-04-20 05:57:01 (105 MB/s) - ‘lab3-iot-gendata.txt.enc’ saved [585/585]\n",
+      "2019-04-20 07:09:56 (105 MB/s) - ‘lab3-iot-gendata.txt.enc’ saved [585/585]\n",
       "\n"
      ]
     }
@@ -215,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -239,38 +224,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lab3IotGenDataRdd = sc.textFile(\"lab3-iot-gendata.txt\")\n",
-    "lab3IotGenDataRdd \\\n",
-    ".flatMap(lambda s : s.split()).collect()\n",
-    "\n",
-    "#.map(lambda s : s.strip()) \\\n",
-    "#lab3IotGenDataRdd.collect()"
+    "# Note different behavior when using split() and split(' ')\n",
+    "lab3IotGenDataRdd.flatMap(lambda s : s.split()).count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternative spark sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|           dataSplit|\n",
+      "+--------------------+\n",
+      "|[77  84  76  68  ...|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import Row\n",
+    "from pyspark.sql.functions import *\n",
+    "lab3IotGenDataDF = lab3IotGenDataRdd.map(lambda x : Row(data=x)).toDF()\n",
+    "\n",
+    "\n",
+    "#lab3IotGenDataDF.show()\n",
+    "lab3IotGenDataDF.selectExpr(\"split(data,'\\s+') as dataSplit\").show()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+\n",
+      "| id|\n",
+      "+---+\n",
+      "|  0|\n",
+      "|  1|\n",
+      "|  2|\n",
+      "|  3|\n",
+      "|  4|\n",
+      "|  5|\n",
+      "|  6|\n",
+      "|  7|\n",
+      "|  8|\n",
+      "|  9|\n",
+      "+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.range(10).show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -282,21 +320,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
